introduced ejb-facade arch
