# src/main/java/org/agoncal/application/petstore/rest/ProductEndpoint.java
@@ -1,106 +1,0 @@
-package org.agoncal.application.petstore.rest;
-
-import io.swagger.annotations.Api;
-import io.swagger.annotations.ApiOperation;
-import org.agoncal.application.petstore.model.Product;
-import org.agoncal.application.petstore.util.Loggable;
-
-import javax.ejb.Stateless;
-import javax.persistence.*;
-import javax.ws.rs.*;
-import javax.ws.rs.core.Response;
-import javax.ws.rs.core.Response.Status;
-import javax.ws.rs.core.UriBuilder;
-import java.util.List;
-
-/**
- * @author Antonio Goncalves
- * http://www.antoniogoncalves.org
- * --
- */
-
-@Stateless
-@Path("/products")
-@Loggable
-@Api("Product")
-public class ProductEndpoint {
-
-    // ======================================
-    // =             Attributes             =
-    // ======================================
-
-    @PersistenceContext(unitName = "applicationPetstorePU")
-    private EntityManager em;
-
-    // ======================================
-    // =          Business methods          =
-    // ======================================
-
-    @POST
-    @Consumes({"application/xml", "application/json"})
-    @ApiOperation("Creates new product")
-    public Response create(Product entity) {
-        em.persist(entity);
-        return Response.created(UriBuilder.fromResource(ProductEndpoint.class).path(String.valueOf(entity.getId())).build()).build();
-    }
-
-    @DELETE
-    @Path("/{id:[0-9][0-9]*}")
-    @ApiOperation("Deletes a product by id")
-    public Response deleteById(@PathParam("id") Long id) {
-        Product entity = em.find(Product.class, id);
-        if (entity == null) {
-            return Response.status(Status.NOT_FOUND).build();
-        }
-        em.remove(entity);
-        return Response.noContent().build();
-    }
-
-    @GET
-    @Path("/{id:[0-9][0-9]*}")
-    @Produces({"application/xml", "application/json"})
-    @ApiOperation("Finds a product by id")
-    public Response findById(@PathParam("id") Long id) {
-        TypedQuery<Product> findByIdQuery = em.createQuery("SELECT DISTINCT p FROM Product p LEFT JOIN FETCH p.category WHERE p.id = :entityId ORDER BY p.id", Product.class);
-        findByIdQuery.setParameter("entityId", id);
-        Product entity;
-        try {
-            entity = findByIdQuery.getSingleResult();
-        } catch (NoResultException nre) {
-            entity = null;
-        }
-        if (entity == null) {
-            return Response.status(Status.NOT_FOUND).build();
-        }
-        return Response.ok(entity).build();
-    }
-
-    @GET
-    @Produces({"application/xml", "application/json"})
-    @ApiOperation("Lists all products")
-    public List<Product> listAll(@QueryParam("start") Integer startPosition, @QueryParam("max") Integer maxResult) {
-        TypedQuery<Product> findAllQuery = em.createQuery("SELECT DISTINCT p FROM Product p LEFT JOIN FETCH p.category ORDER BY p.id", Product.class);
-        if (startPosition != null) {
-            findAllQuery.setFirstResult(startPosition);
-        }
-        if (maxResult != null) {
-            findAllQuery.setMaxResults(maxResult);
-        }
-        final List<Product> results = findAllQuery.getResultList();
-        return results;
-    }
-
-    @PUT
-    @Path("/{id:[0-9][0-9]*}")
-    @Consumes({"application/xml", "application/json"})
-    @ApiOperation("Updates a product")
-    public Response update(Product entity) {
-        try {
-            entity = em.merge(entity);
-        } catch (OptimisticLockException e) {
-            return Response.status(Response.Status.CONFLICT).entity(e.getEntity()).build();
-        }
-
-        return Response.noContent().build();
-    }
-}
