# src/main/java/org/agoncal/application/pfm/model/Category.java
@@ -1,0 +1,24 @@
+package org.agoncal.application.pfm.model;
+
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import javax.persistence.Entity;
+import javax.persistence.Id;
+
+@Data
+@NoArgsConstructor
+@Entity
+public class Category {
+    private Long id;
+    private String category;
+
+    @Id
+    public Long getId() {
+        return id;
+    }
+
+    public void setId(Long id) {
+        this.id = id;
+    }
+}
