# src/main/java/org/agoncal/application/pfm/model/Transaction.java
@@ -1,0 +1,30 @@
+package org.agoncal.application.pfm.model;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import javax.persistence.Entity;
+import javax.persistence.Id;
+import java.math.BigDecimal;
+import java.util.Date;
+
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+@Entity
+public class Transaction {
+    private Long id;
+    private BigDecimal amount;
+    private Date dt;
+    private String category;
+
+    @Id
+    public Long getId() {
+        return id;
+    }
+
+    public void setId(Long id) {
+        this.id = id;
+    }
+}
