# src/main/webapp/swagger.json
@@ -13,116 +13,12 @@
   "host" : "localhost:8080",
   "basePath" : "/applicationPetstore/rest",
   "tags" : [ {
-    "name" : "Category"
-  }, {
     "name" : "Country"
   }, {
     "name" : "Customer"
-  }, {
-    "name" : "Item"
-  }, {
-    "name" : "Product"
   } ],
   "schemes" : [ "http", "https" ],
   "paths" : {
-    "/categories" : {
-      "get" : {
-        "tags" : [ "Category" ],
-        "summary" : "Lists all the categories",
-        "description" : "",
-        "operationId" : "listAll",
-        "produces" : [ "application/xml", "application/json" ],
-        "parameters" : [ {
-          "name" : "start",
-          "in" : "query",
-          "required" : false,
-          "type" : "integer",
-          "format" : "int32"
-        }, {
-          "name" : "max",
-          "in" : "query",
-          "required" : false,
-          "type" : "integer",
-          "format" : "int32"
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "successful operation",
-            "schema" : {
-              "type" : "array",
-              "items" : {
-                "$ref" : "#/definitions/Category"
-              }
-            }
-          }
-        }
-      },
-      "post" : {
-        "tags" : [ "Category" ],
-        "summary" : "Creates a category",
-        "description" : "",
-        "operationId" : "create",
-        "consumes" : [ "application/xml", "application/json" ],
-        "responses" : {
-          "default" : {
-            "description" : "successful operation"
-          }
-        }
-      }
-    },
-    "/categories/{id}" : {
-      "get" : {
-        "tags" : [ "Category" ],
-        "summary" : "Finds a category given an identifier",
-        "description" : "",
-        "operationId" : "findById",
-        "produces" : [ "application/xml", "application/json" ],
-        "parameters" : [ {
-          "name" : "id",
-          "in" : "path",
-          "required" : true,
-          "type" : "integer",
-          "pattern" : "[0-9][0-9]*",
-          "format" : "int64"
-        } ],
-        "responses" : {
-          "default" : {
-            "description" : "successful operation"
-          }
-        }
-      },
-      "put" : {
-        "tags" : [ "Category" ],
-        "summary" : "Updates a category",
-        "description" : "",
-        "operationId" : "update",
-        "consumes" : [ "application/xml", "application/json" ],
-        "responses" : {
-          "default" : {
-            "description" : "successful operation"
-          }
-        }
-      },
-      "delete" : {
-        "tags" : [ "Category" ],
-        "summary" : "Deletes a category by id",
-        "description" : "",
-        "operationId" : "deleteById",
-        "parameters" : [ {
-          "name" : "id",
-          "in" : "path",
-          "required" : true,
-          "type" : "integer",
-          "pattern" : "[0-9][0-9]*",
-          "format" : "int64"
-        } ],
-        "responses" : {
-          "default" : {
-            "description" : "successful operation"
-          }
-        }
-      }
-    },
     "/countries" : {
       "get" : {
         "tags" : [ "Country" ],
@@ -318,202 +214,6 @@
           }
         }
       }
-    },
-    "/items" : {
-      "get" : {
-        "tags" : [ "Item" ],
-        "summary" : "Lists all items",
-        "description" : "",
-        "operationId" : "listAll",
-        "produces" : [ "application/xml", "application/json" ],
-        "parameters" : [ {
-          "name" : "start",
-          "in" : "query",
-          "required" : false,
-          "type" : "integer",
-          "format" : "int32"
-        }, {
-          "name" : "max",
-          "in" : "query",
-          "required" : false,
-          "type" : "integer",
-          "format" : "int32"
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "successful operation",
-            "schema" : {
-              "type" : "array",
-              "items" : {
-                "$ref" : "#/definitions/Item"
-              }
-            }
-          }
-        }
-      },
-      "post" : {
-        "tags" : [ "Item" ],
-        "summary" : "Creates a new item",
-        "description" : "",
-        "operationId" : "create",
-        "consumes" : [ "application/xml", "application/json" ],
-        "responses" : {
-          "default" : {
-            "description" : "successful operation"
-          }
-        }
-      }
-    },
-    "/items/{id}" : {
-      "get" : {
-        "tags" : [ "Item" ],
-        "summary" : "Finds an item by its id",
-        "description" : "",
-        "operationId" : "findById",
-        "produces" : [ "application/xml", "application/json" ],
-        "parameters" : [ {
-          "name" : "id",
-          "in" : "path",
-          "required" : true,
-          "type" : "integer",
-          "pattern" : "[0-9][0-9]*",
-          "format" : "int64"
-        } ],
-        "responses" : {
-          "default" : {
-            "description" : "successful operation"
-          }
-        }
-      },
-      "put" : {
-        "tags" : [ "Item" ],
-        "summary" : "Updates an item",
-        "description" : "",
-        "operationId" : "update",
-        "consumes" : [ "application/xml", "application/json" ],
-        "responses" : {
-          "default" : {
-            "description" : "successful operation"
-          }
-        }
-      },
-      "delete" : {
-        "tags" : [ "Item" ],
-        "summary" : "Deletes an item by its id",
-        "description" : "",
-        "operationId" : "deleteById",
-        "parameters" : [ {
-          "name" : "id",
-          "in" : "path",
-          "required" : true,
-          "type" : "integer",
-          "pattern" : "[0-9][0-9]*",
-          "format" : "int64"
-        } ],
-        "responses" : {
-          "default" : {
-            "description" : "successful operation"
-          }
-        }
-      }
-    },
-    "/products" : {
-      "get" : {
-        "tags" : [ "Product" ],
-        "summary" : "Lists all products",
-        "description" : "",
-        "operationId" : "listAll",
-        "produces" : [ "application/xml", "application/json" ],
-        "parameters" : [ {
-          "name" : "start",
-          "in" : "query",
-          "required" : false,
-          "type" : "integer",
-          "format" : "int32"
-        }, {
-          "name" : "max",
-          "in" : "query",
-          "required" : false,
-          "type" : "integer",
-          "format" : "int32"
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "successful operation",
-            "schema" : {
-              "type" : "array",
-              "items" : {
-                "$ref" : "#/definitions/Product"
-              }
-            }
-          }
-        }
-      },
-      "post" : {
-        "tags" : [ "Product" ],
-        "summary" : "Creates new product",
-        "description" : "",
-        "operationId" : "create",
-        "consumes" : [ "application/xml", "application/json" ],
-        "responses" : {
-          "default" : {
-            "description" : "successful operation"
-          }
-        }
-      }
-    },
-    "/products/{id}" : {
-      "get" : {
-        "tags" : [ "Product" ],
-        "summary" : "Finds a product by id",
-        "description" : "",
-        "operationId" : "findById",
-        "produces" : [ "application/xml", "application/json" ],
-        "parameters" : [ {
-          "name" : "id",
-          "in" : "path",
-          "required" : true,
-          "type" : "integer",
-          "pattern" : "[0-9][0-9]*",
-          "format" : "int64"
-        } ],
-        "responses" : {
-          "default" : {
-            "description" : "successful operation"
-          }
-        }
-      },
-      "put" : {
-        "tags" : [ "Product" ],
-        "summary" : "Updates a product",
-        "description" : "",
-        "operationId" : "update",
-        "consumes" : [ "application/xml", "application/json" ],
-        "responses" : {
-          "default" : {
-            "description" : "successful operation"
-          }
-        }
-      },
-      "delete" : {
-        "tags" : [ "Product" ],
-        "summary" : "Deletes a product by id",
-        "description" : "",
-        "operationId" : "deleteById",
-        "parameters" : [ {
-          "name" : "id",
-          "in" : "path",
-          "required" : true,
-          "type" : "integer",
-          "pattern" : "[0-9][0-9]*",
-          "format" : "int64"
-        } ],
-        "responses" : {
-          "default" : {
-            "description" : "successful operation"
-          }
-        }
-      }
     }
   },
   "definitions" : {
@@ -544,30 +244,6 @@
         },
         "country" : {
           "$ref" : "#/definitions/Country"
-        }
-      }
-    },
-    "Category" : {
-      "type" : "object",
-      "required" : [ "description", "name" ],
-      "properties" : {
-        "id" : {
-          "type" : "integer",
-          "format" : "int64"
-        },
-        "version" : {
-          "type" : "integer",
-          "format" : "int32"
-        },
-        "name" : {
-          "type" : "string",
-          "minLength" : 1,
-          "maxLength" : 30
-        },
-        "description" : {
-          "type" : "string",
-          "minLength" : 0,
-          "maxLength" : 3000
         }
       }
     },
@@ -668,67 +344,6 @@
         },
         "fullName" : {
           "type" : "string"
-        }
-      }
-    },
-    "Item" : {
-      "type" : "object",
-      "required" : [ "description", "name", "unitCost" ],
-      "properties" : {
-        "id" : {
-          "type" : "integer",
-          "format" : "int64"
-        },
-        "version" : {
-          "type" : "integer",
-          "format" : "int32"
-        },
-        "name" : {
-          "type" : "string",
-          "minLength" : 1,
-          "maxLength" : 30
-        },
-        "description" : {
-          "type" : "string",
-          "minLength" : 0,
-          "maxLength" : 3000
-        },
-        "imagePath" : {
-          "type" : "string"
-        },
-        "unitCost" : {
-          "type" : "number",
-          "format" : "float"
-        },
-        "product" : {
-          "$ref" : "#/definitions/Product"
-        }
-      }
-    },
-    "Product" : {
-      "type" : "object",
-      "required" : [ "description", "name" ],
-      "properties" : {
-        "id" : {
-          "type" : "integer",
-          "format" : "int64"
-        },
-        "version" : {
-          "type" : "integer",
-          "format" : "int32"
-        },
-        "name" : {
-          "type" : "string",
-          "minLength" : 1,
-          "maxLength" : 30
-        },
-        "description" : {
-          "type" : "string",
-          "minLength" : 0,
-          "maxLength" : 3000
-        },
-        "category" : {
-          "$ref" : "#/definitions/Category"
         }
       }
     }
